--- a/client/src/loading/LoadingPage.module.css
+++ b/client/src/loading/LoadingPage.module.css
@@ -1,6 +1,6 @@
 .loading {
   width: 100vw;
-  height: 100vh;
+  height: 104vh;
   position: absolute;
   display: flex;
   justify-content: center;
@@ -36,7 +36,7 @@
   justify-items: center;
   align-items: center;
   top: 47px;
-  left: 46px;
+  left: 50px;
   position: absolute;
   font-size: 40px;
   font-weight: 800;
